# OpticalFlow

./: LICENSE  OpticalFlow.sln  README.md
CMake/: CMakeLists.txt  OpticalFlow.cpp  README.md
CMake/OpticalFlow/: OpticalFlow.cpp
CompOpticalFlow/: Common.hxx  CompOpticalFlow.vcxproj  CompOpticalFlow.vcxproj.filters  Interface.hxx  README.md  main.cpp
CompOpticalFlow/OpenGL/: Grid.cpp  README.md
CompOpticalFlow/OpticalFlow/: CftLK.cpp  HS.cpp  ImgProc.hxx  LK.cpp
OpticalFlow/: OpticalFlow.cpp  OpticalFlow.vcxproj  OpticalFlow.vcxproj.filters  config.h  main.cpp  stdafx.cpp  stdafx.h
python/: README.md  main.py  requirements.txt
python/algm/: CftLk.py
python/plot/: Plot4Lk.py
